Fixed static sites on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,38 +1,37 @@
 html, body {
-    overflow-x: clip;
+  overflow-x: clip;
 }
 
 body {
-    font-family: 'Inconsolata', sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    background-color: #fafafa;
+  font-family: 'Inconsolata', sans-serif;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  background-color: #fafafa;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
 }
 
 p {
-    font-size: 1rem;
-    line-height: 1;
+  font-size: 1rem;
+  line-height: 1;
 }
 
 h1 {
-    margin: 40px 0 30px;
-    font-size: 1.3rem;
+  margin: 40px 0 30px;
+  font-size: 1.3rem;
 }
 
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 
