--- a/src/styles/lite.css
+++ b/src/styles/lite.css
@@ -1,34 +1,46 @@
 .lite-header {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+  .lite-header span {
+    display: none;
+  }
 }
 
 .lite-desc {
-    font-size: 1.2rem;
-    padding: 40px 50px 30px;
+  font-size: 1.2rem;
+  padding: 40px 50px 30px;
+}
+
+@media (max-width: 600px) {
+  .lite-desc {
+    padding: 20px 10px;
+  }
 }
 
 .home {
-    margin: 10px 0 10px 20px;
+  margin: 10px 0 10px 20px;
 }
 
 .home img {
-    height: 25px;
-    margin-right: 10px;
+  height: 25px;
+  margin-right: 10px;
 }
 
 .lite-list > div {
-    border-top: 1px solid #333;
-    cursor: pointer;
+  border-top: 1px solid #333;
+  cursor: pointer;
 }
 
 .lite-list > div > div:first-child {
-    padding: 10px;
-    font-weight: bold;
+  padding: 10px;
+  font-weight: bold;
 }
 
 .lite-list > div > div:last-child {
-    padding: 0 10px 10px 10px;
-    flex-grow: 1;
+  padding: 0 10px 10px 10px;
+  flex-grow: 1;
 }
